--- a/src/app/segundo-dia/segundo-dia.component.html
+++ b/src/app/segundo-dia/segundo-dia.component.html
@@ -65,7 +65,6 @@
         </tr>
     </tbody>
 </table>
-
 <h1>INPUTS NO REACTIVOS</h1>
 <span>Nombre</span>
 <input
@@ -86,7 +85,6 @@
 <small>{{description}}</small>
    </div>
 </div>
-
 <button
     class="btn btn-success"
     (click)="submitForm()"
@@ -113,3 +111,4 @@
        Guardar los datos
 </button>
 </form>
+hola mundo 
