todos los componentes que manejamos en el tercer dia

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,8 @@
       </div>
     </div>
   </nav>
-<h3>hola mundo</h3>
-<h1>Buenos dias</h1>
+<!-- <h3>hola mundo</h3>
+<h1>Buenos dias</h1> -->
 
 
 <!-- <app-primer-dia [ejemplo]="dinamico"></app-primer-dia> -->
