todo lo de proyecto final

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="./tercer-dia/">3er dia</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./protecto-final/">Proyecto final</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
